kubernetes/auth-microservice-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-microservice-deployment
  labels:
    app: shopify-backend-challenge-auth
spec:
  replicas: 3
  selector:
    matchLabels:
      app: shopify-backend-challenge-auth
  template:
    metadata:
      labels:
        app: shopify-backend-challenge-auth
    spec:
      containers:
        - name: auth-microservice
          image: wtrep/shopify-backend-challenge-auth:1.0.3
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 30
        - name: cloud-sql-proxy
          image: gcr.io/cloudsql-docker/gce-proxy:1.17
          command:
            - "/cloud_sql_proxy"
            - "-instances=shopify-image-repo:northamerica-northeast1:shopify-challenge-images-repo-3=tcp:3306"
            - "-credential_file=/secrets/service_account.json"
          securityContext:
            runAsNonRoot: true
          volumeMounts:
            - name: sql-secret-mount
              mountPath: /secrets/
              readOnly: true
      volumes:
        - name: sql-secret-mount
          secret:
            secretName: sql-sa-secret
