kubernetes/image-microservice-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: image-microservice-deployment
  labels:
    app: shopify-backend-challenge-image
spec:
  replicas: 3
  selector:
    matchLabels:
      app: shopify-backend-challenge-image
  template:
    metadata:
      labels:
        app: shopify-backend-challenge-image
    spec:
      containers:
        - name: image-microservice
          image: wtrep/shopify-backend-challenge-image:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: gcp-sa-volume
              mountPath: /opt/certs
      volumes:
        - name: gcp-sa-volume
          secret:
            secretName: gcp-image-sa
