kubernetes/cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: image-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: shopify-backend-challenge-image
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: auth-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: shopify-backend-challenge-auth
  ports:
    - port: 80
      targetPort: 8080
