kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: backend-ingress
spec:
  rules:
    - host: api.trep.cloud
      http:
        paths:
          - path: /user
            backend:
              serviceName: auth-cluster-ip-service
              servicePort: 80
          - path: /key
            backend:
              serviceName: auth-cluster-ip-service
              servicePort: 80
          - path: /image/*
            backend:
              serviceName: image-cluster-ip-service
              servicePort: 80
          - path: /images
            backend:
              serviceName: image-cluster-ip-service
              servicePort: 80
          - path: /upload/*
            backend:
              serviceName: image-cluster-ip-service
              servicePort: 80
